--- a/index.html
+++ b/index.html
@@ -1,16 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>My Data Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #0052cc;
+      color: white;
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+
+    main {
+      padding: 30px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #0052cc;
+      border-bottom: 2px solid #eee;
+      padding-bottom: 5px;
+    }
+
+    iframe {
+      border: 1px solid #ccc;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      margin: 20px 0;
+      width: 100%;
+      max-width: 100%;
+      height: 600px;
+    }
+
+    footer {
+      background-color: #f1f1f1;
+      color: #555;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+
+    .intro {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Portfolio</h1>
-  <p>This site showcases my work in data analytics using Power BI and Tableau.</p>
 
-  <h2>📊 Power BI Project</h2>
-  <iframe width="800" height="600" src="PASTE_YOUR_POWERBI_LINK_HERE" frameborder="0" allowFullScreen="true"></iframe>
+  <header>
+    <h1>Welcome to My Data Portfolio</h1>
+  </header>
 
-  <h2>📈 Tableau Project</h2>
-  <iframe width="800" height="600" src="PASTE_YOUR_TABLEAU_LINK_HERE" frameborder="0" allowFullScreen="true"></iframe>
+  <main>
+    <p class="intro">
+      I'm a data analyst passionate about transforming numbers into narratives. This site showcases some of my favorite Power BI and Tableau projects. Dive in and explore the insights!
+    </p>
+
+    <h2>📊 Power BI Project</h2>
+    <iframe src="PASTE_YOUR_POWERBI_LINK_HERE" allowfullscreen></iframe>
+
+    <h2>📈 Tableau Project</h2>
+    <iframe src="PASTE_YOUR_TABLEAU_LINK_HERE" allowfullscreen></iframe>
+  </main>
+
+  <footer>
+    &copy; 2025 Your Name | Built with ❤️ and GitHub Pages
+  </footer>
+
 </body>
 </html>
