--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Data Portfolio</title>
+  <title>Umer K Khan - Data Portfolio</title>
+  <!-- Google Font: Roboto -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(to right, #c9d6ff, #e2e2e2);
       color: #333;
       margin: 0;
       padding: 0;
@@ -54,21 +56,34 @@
     }
 
     .intro {
-      font-size: 1.1em;
+      font-size: 1.2em;
       line-height: 1.6;
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
+      color: #333;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Welcome to My Data Portfolio</h1>
+    <h1>Umer K Khan</h1>
+    <p>Business Intelligence & Analytics Professional | 500+ Dashboards Built | Top 500 Kaggle Contributor</p>
   </header>
 
   <main>
-    <p class="intro">
-      I'm a data analyst passionate about transforming numbers into narratives. This site showcases some of my favorite Power BI and Tableau projects. Dive in and explore the insights!
-    </p>
+    <section class="intro">
+      <p>
+        Welcome to my portfolio! I’m a <strong>Business Intelligence & Data Analyst</strong> with over 4 years of experience transforming complex data into actionable insights. At MyRegistry.com, I specialize in <strong>dashboarding, data pipelines</strong>, and <strong>stakeholder reporting</strong>—helping organizations make data-driven decisions.
+      </p>
+      <p>
+        With expertise in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>, I have successfully built over 500 high-impact dashboards that have helped companies streamline their data and achieve measurable outcomes. I’m proud to be ranked in the <strong>top 500 Kaggle contributors</strong>, where my projects have been viewed by thousands.
+      </p>
+      <p>
+        Driven by a passion for <strong>data storytelling</strong> and <strong>automation</strong>, I strive to make data more accessible and impactful for everyone.
+      </p>
+    </section>
 
     <h2>📊 Power BI Project</h2>
     <iframe src="PASTE_YOUR_POWERBI_LINK_HERE" allowfullscreen></iframe>
@@ -78,7 +93,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Your Name | Built with ❤️ and GitHub Pages
+    &copy; 2025 Umer K Khan | Built with ❤️ and GitHub Pages
   </footer>
 
 </body>
