--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,20 +76,16 @@
   <main>
     <section class="intro">
       <p>
-        Welcome to my portfolio! I’m a <strong>Business Intelligence & Data Analyst</strong> with over 4 years of experience transforming complex data into actionable insights. At MyRegistry.com, I specialize in <strong>dashboarding, data pipelines</strong>, and <strong>stakeholder reporting</strong>—helping organizations make data-driven decisions.
+        I'm a <strong>Business Intelligence & Data Analyst</strong> with 4+ years of experience at MyRegistry.com, where I design <strong>dashboards, data pipelines</strong>, and <strong>automated reports</strong> to drive strategic decisions.
       </p>
       <p>
-        With expertise in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>, I have successfully built over 500 high-impact dashboards that have helped companies streamline their data and achieve measurable outcomes. I’m proud to be ranked in the <strong>top 500 Kaggle contributors</strong>, where my projects have been viewed by thousands.
-      </p>
-      <p>
-        Driven by a passion for <strong>data storytelling</strong> and <strong>automation</strong>, I strive to make data more accessible and impactful for everyone.
+        Skilled in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>, I’ve built over 500 dashboards and rank among the <strong>top 500 Kaggle contributors</strong>.
       </p>
     </section>
 
-    <h2>📊 Power BI Project</h2>
-    <iframe src="PASTE_YOUR_POWERBI_LINK_HERE" allowfullscreen></iframe>
+   
 
-    <h2>📈 Tableau Project</h2>
+    <h2>📈 Business Intelligence Dashboards (Tableau)</h2>
     <iframe src="PASTE_YOUR_TABLEAU_LINK_HERE" allowfullscreen></iframe>
   </main>
 
