--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         I'm a <strong>Business Intelligence & Data Analyst</strong> with 4+ years of experience at MyRegistry.com, where I design <strong>dashboards, data pipelines</strong>, and <strong>automated reports</strong> to drive strategic decisions.
       </p>
       <p>
-        Skilled in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>, I’ve built over 500 dashboards and rank among the <strong>top 500 Kaggle contributors</strong>.
+        Skilled in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>.
       </p>
     </section>
 
