--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
       text-align: center;
       color: #333;
     }
+
+    .project-description {
+      font-size: 1em;
+      color: #444;
+      margin: 10px 0 20px;
+    }
   </style>
 </head>
 <body>
@@ -78,19 +84,56 @@
         I'm a <strong>Business Intelligence & Data Analyst</strong> with 4+ years of experience at MyRegistry.com, where I design <strong>dashboards, data pipelines</strong>, and <strong>automated reports</strong> to drive strategic decisions.
       </p>
       <p>
-        Skilled in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>.
+        Skilled in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>, I’ve built over 500 dashboards and rank among the <strong>top 500 Kaggle contributors</strong>.
       </p>
     </section>
 
-   
+    <h2>📈 Tableau Projects</h2>
 
-    <h2>📈 Business Intelligence and Analytics Dashboard (Tableau)</h2>
+    <div class="project-description">
+      <strong>Customer Segmentation & Sales Optimization Dashboard:</strong> This Tableau project showcases how I combined clustering techniques with dynamic filters to uncover key customer segments and product-level performance. Built for executive review and sales strategy alignment.
+    </div>
+    <div class='tableauPlaceholder' id='viz1746374553940' style='position: relative'>
+      <noscript><a href='#'><img alt='Dashboard 2 ' src='https://public.tableau.com/static/images/Bo/Book1_17451317524040/Dashboard2/1_rss.png' style='border: none' /></a></noscript>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='Book1_17451317524040/Dashboard2' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https://public.tableau.com/static/images/Bo/Book1_17451317524040/Dashboard2/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+      </object>
+    </div>
+    <script type='text/javascript'>
+      var divElement = document.getElementById('viz1746374553940');
+      var vizElement = divElement.getElementsByTagName('object')[0];
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.width = '1300px';
+        vizElement.style.height = '887px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.width = '1300px';
+        vizElement.style.height = '887px';
+      } else {
+        vizElement.style.width = '100%';
+        vizElement.style.height = '777px';
+      }
+      var scriptElement = document.createElement('script');
+      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+
+    <div class="project-description">
+      <strong>Executive Sales Dashboard:</strong> Built for cross-departmental visibility, this dashboard summarizes regional sales trends, YoY performance, and category-wise contribution. It streamlines weekly performance reviews for leadership teams.
+    </div>
     <div class='tableauPlaceholder' id='viz1746374094662' style='position: relative'>
-      <noscript>
-        <a href='#'>
-          <img alt='Sales Dashboard ' src='https://public.tableau.com/static/images/Sa/SalesDashboard_17458550176770/Dashboard1/1_rss.png' style='border: none' />
-        </a>
-      </noscript>
+      <noscript><a href='#'><img alt='Sales Dashboard ' src='https://public.tableau.com/static/images/Sa/SalesDashboard_17458550176770/Dashboard1/1_rss.png' style='border: none' /></a></noscript>
       <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
@@ -124,6 +167,9 @@
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
+
+    <h2>📊 Power BI Project</h2>
+    <iframe src="PASTE_YOUR_POWERBI_LINK_HERE" allowfullscreen></iframe>
   </main>
 
   <footer>
@@ -132,4 +178,5 @@
 
 </body>
 </html>
+
 
