--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     }
 
     header {
-      background-color: #0052cc;
-      color: white;
+      background-color: white;
+      color: #4C837A;
       padding: 40px 20px;
       text-align: center;
     }
@@ -24,6 +24,12 @@
     header h1 {
       margin: 0;
       font-size: 2.5em;
+      color: #4C837A;
+    }
+
+    header p {
+      color: #4C837A;
+      font-weight: 500;
     }
 
     main {
@@ -33,7 +39,7 @@
     }
 
     h2 {
-      color: #0052cc;
+      color: #4C837A;
       border-bottom: 2px solid #eee;
       padding-bottom: 5px;
     }
@@ -63,43 +69,33 @@
       text-align: center;
       color: #333;
     }
-
-    .project-description {
-      font-size: 1em;
-      color: #444;
-      margin: 10px 0 20px;
-    }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Umer K Khan</h1>
+    <h1>Umer K. Khan</h1>
     <p>Business Intelligence & Analytics Professional | 500+ Dashboards Built | Top 500 Kaggle Contributor</p>
   </header>
 
   <main>
     <section class="intro">
       <p>
-        I'm a <strong>Business Intelligence & Data Analyst</strong> with 4+ years of experience at MyRegistry.com, where I design <strong>dashboards, data pipelines</strong>, and <strong>automated reports</strong> to drive strategic decisions.
-      </p>
-      <p>
-        Skilled in <strong>Tableau</strong>, <strong>SQL</strong>, <strong>Python</strong>, <strong>GA4</strong>, and <strong>Power BI</strong>, I’ve built over 500 dashboards and rank among the <strong>top 500 Kaggle contributors</strong>.
+        I'm a Business Intelligence Analyst with 4+ years of experience delivering data-driven insights, building 500+ dashboards, and automating reporting for scalable business decisions.
       </p>
     </section>
 
-    <h2>📈 Tableau Projects</h2>
-
-    <div class="project-description">
-      <strong>Customer Segmentation & Sales Optimization Dashboard:</strong> This Tableau project showcases how I combined clustering techniques with dynamic filters to uncover key customer segments and product-level performance. Built for executive review and sales strategy alignment.
-    </div>
+    <h2>📊 Tableau Project – Regional Sales Performance</h2>
+    <p>This interactive dashboard showcases regional sales metrics, trends, and key product segments. Designed for executive decision-making, it highlights growth opportunities and underperforming areas across categories.</p>
     <div class='tableauPlaceholder' id='viz1746374553940' style='position: relative'>
-      <noscript><a href='#'><img alt='Dashboard 2 ' src='https://public.tableau.com/static/images/Bo/Book1_17451317524040/Dashboard2/1_rss.png' style='border: none' /></a></noscript>
+      <noscript>
+        <a href='#'><img alt='Dashboard 2 ' src='https://public.tableau.com/static/images/Bo/Book1_17451317524040/Dashboard2/1_rss.png' style='border: none' /></a>
+      </noscript>
       <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
         <param name='site_root' value='' />
-        <param name='name' value='Book1_17451317524040/Dashboard2' />
+        <param name='name' value='Book1_17451317524040&#47;Dashboard2' />
         <param name='tabs' value='no' />
         <param name='toolbar' value='yes' />
         <param name='static_image' value='https://public.tableau.com/static/images/Bo/Book1_17451317524040/Dashboard2/1.png' />
@@ -129,16 +125,17 @@
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
 
-    <div class="project-description">
-      <strong>Executive Sales Dashboard:</strong> Built for cross-departmental visibility, this dashboard summarizes regional sales trends, YoY performance, and category-wise contribution. It streamlines weekly performance reviews for leadership teams.
-    </div>
+    <h2>📈 Tableau Project – E-Commerce Sales Dashboard</h2>
+    <p>This dashboard provides deep insights into e-commerce sales performance across products, regions, and time. It enables data-driven marketing, forecasting, and category performance analysis.</p>
     <div class='tableauPlaceholder' id='viz1746374094662' style='position: relative'>
-      <noscript><a href='#'><img alt='Sales Dashboard ' src='https://public.tableau.com/static/images/Sa/SalesDashboard_17458550176770/Dashboard1/1_rss.png' style='border: none' /></a></noscript>
+      <noscript>
+        <a href='#'><img alt='Sales Dashboard ' src='https://public.tableau.com/static/images/Sa/SalesDashboard_17458550176770/Dashboard1/1_rss.png' style='border: none' /></a>
+      </noscript>
       <object class='tableauViz' style='display:none;'>
         <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
         <param name='embed_code_version' value='3' />
         <param name='site_root' value='' />
-        <param name='name' value='SalesDashboard_17458550176770/Dashboard1' />
+        <param name='name' value='SalesDashboard_17458550176770&#47;Dashboard1' />
         <param name='tabs' value='no' />
         <param name='toolbar' value='yes' />
         <param name='static_image' value='https://public.tableau.com/static/images/Sa/SalesDashboard_17458550176770/Dashboard1/1.png' />
@@ -167,14 +164,14 @@
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
-
-    <h2>📊 Power BI Project</h2>
-    <iframe src="PASTE_YOUR_POWERBI_LINK_HERE" allowfullscreen></iframe>
   </main>
 
   <footer>
     &copy; 2025 Umer K Khan | Built with ❤️ and GitHub Pages
   </footer>
+
+</body>
+</html>
 
 </body>
 </html>
