--- a/index.html
+++ b/index.html
@@ -69,6 +69,22 @@
       text-align: center;
       color: #333;
     }
+
+    .links {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .links a {
+      color: #4C837A;
+      font-weight: 500;
+      text-decoration: none;
+      margin: 0 15px;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -164,14 +180,17 @@
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
+
+    <h2>📄 Links</h2>
+    <div class="links">
+      <a href="https://umer960.github.io/Umer_K.Khan_Resume.pdf" target="_blank">Resume</a>
+      <a href="https://www.linkedin.com/in/umer-k-khan-aa403a143/" target="_blank">LinkedIn</a>
+    </div>
   </main>
 
   <footer>
     &copy; 2025 Umer K Khan | Built with ❤️ and GitHub Pages
   </footer>
-
-</body>
-</html>
 
 </body>
 </html>
