--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <div class="links">
       <a href="https://umer960.github.io/Umer_K.Khan_Resume.pdf" target="_blank">Resume</a>
       <a href="https://www.linkedin.com/in/umer-k-khan-aa403a143/" target="_blank">LinkedIn</a>
+      <a href="https://www.kaggle.com/umerkk12/code?orderBy=dateUpdated" target="_blank">Python & Machine Learning Projects</a>
     </div>
   </header>
 
@@ -132,13 +133,13 @@
       var divElement = document.getElementById('viz1746374553940');
       var vizElement = divElement.getElementsByTagName('object')[0];
       if (divElement.offsetWidth > 800) {
-        vizElement.style.width = '115%'; // Set to 100% to make the iframe responsive
-        vizElement.style.height = '900px'; // Adjust the height to keep proportions
+        vizElement.style.width = '115%';
+        vizElement.style.height = '900px';
       } else if (divElement.offsetWidth > 500) {
         vizElement.style.width = '115%';
         vizElement.style.height = '900px';
       } else {
-        vizElement.style.width = '115%'; // Ensure it remains responsive on smaller screens
+        vizElement.style.width = '115%';
         vizElement.style.height = '900px';
       }
       var scriptElement = document.createElement('script');
@@ -193,3 +194,4 @@
 
 </body>
 </html>
+
