--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
       height: 600px;
     }
 
+    img.dashboard {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 20px auto;
+      border: 1px solid #ccc;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
     footer {
       background-color: #f1f1f1;
       color: #555;
@@ -92,7 +101,6 @@
   <header>
     <h1>Umer K. Khan</h1>
     <p>Business Intelligence & Analytics Professional | 500+ Dashboards Built | Top 500 Kaggle Contributor</p>
-    <!-- Links Section -->
     <div class="links">
       <a href="https://umer960.github.io/Umer_K.Khan_Resume.pdf" target="_blank">Resume</a>
       <a href="https://www.linkedin.com/in/umer-k-khan-aa403a143/" target="_blank">LinkedIn</a>
@@ -186,6 +194,19 @@
       scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
       vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
+
+    <h2>📉 Power BI Projects</h2>
+
+    <p><strong>Trending Content Analysis (USA vs UK)</strong></p>
+    <p>The analysis shows the different trends and types of content that are widely viewed by audiences in the USA and UK. It provides a side-by-side comparison of trending videos. The center graphs highlight which genres are most viewed.</p>
+    <p>The scorecards at the top show the total views for each country: 173M in the UK versus 143M in the USA. The top video in the UK exceeds 300M views, while the top video in the USA has over 200M views.</p>
+    <img src="Power BI Project.jpeg" alt="Power BI Project 1" class="dashboard">
+
+    <p><strong>Immigration Insights – IRCC Data</strong></p>
+    <p>This dashboard connects with the IRCC website and visualizes draws for immigration, including the number of invitations and minimum CRS scores. Lower scores are preferable as they allow more people to qualify.</p>
+    <p>Color formatting is based on a 470 CRS score threshold—scores above 470 turn red, while those below appear green, visually indicating favorable draw scores.</p>
+    <img src="Power BI Project 2.jpeg" alt="Power BI Project 2" class="dashboard">
+
   </main>
 
   <footer>
@@ -194,4 +215,5 @@
 
 </body>
 </html>
+
 
